# cli-rust-book

./: Cargo.toml  README.md
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/expected/: all.b.out  all.n.out  all.out  spiders.txt.n.out
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
shared/src/: lib.rs
