[package]
name = "catr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2" }
shared = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { worksapce = true }
rand = { worksapce = true }
